syntax = "proto3";
package request;

option go_package = "./reqProto";

message Start {
    string name = 1;
    string machineName = 2;
    string path = 3;
    string imgName = 4;
    int64 time = 5;
    string scheduleName = 6;
}

message List {
    string scheduleName = 1;
}

message Block {
    string command = 1;
    Start start = 2;
    List list = 3;
}

message Client_Block {
    string for = 1;
    bytes data = 2;
}